tests/dataset/tpc-ds/compiler/c/q9.error
/tmp/q9.c: In function ‘test_TPCDS_Q9_result’:
/tmp/q9.c:201:46: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  201 |   if (test_TPCDS_Q9_result_result.len != tmp1.len) {
      |                                              ^
      |                                              ->
/tmp/q9.c:205:55: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  205 |       if (test_TPCDS_Q9_result_result.data[i3] != tmp1.data[i3]) {
      |                                                       ^
      |                                                       ->
/tmp/q9.c: In function ‘main’:
/tmp/q9.c:232:28: warning: implicit declaration of function ‘store_sale_list_t_create’ [-Wimplicit-function-declaration]
  232 |   store_sale_list_t tmp4 = store_sale_list_t_create(store_sales_len);
      |                            ^~~~~~~~~~~~~~~~~~~~~~~~
/tmp/q9.c:232:28: error: invalid initializer
/tmp/q9.c:266:29: error: invalid initializer
  266 |   store_sale_list_t tmp13 = store_sale_list_t_create(store_sales_len);
      |                             ^~~~~~~~~~~~~~~~~~~~~~~~
/tmp/q9.c:300:29: error: invalid initializer
  300 |   store_sale_list_t tmp22 = store_sale_list_t_create(store_sales_len);
      |                             ^~~~~~~~~~~~~~~~~~~~~~~~
/tmp/q9.c:334:29: error: invalid initializer
  334 |   store_sale_list_t tmp31 = store_sale_list_t_create(store_sales_len);
      |                             ^~~~~~~~~~~~~~~~~~~~~~~~
/tmp/q9.c:368:29: error: invalid initializer
  368 |   store_sale_list_t tmp40 = store_sale_list_t_create(store_sales_len);
      |                             ^~~~~~~~~~~~~~~~~~~~~~~~
/tmp/q9.c:446:33: error: incompatible types when assigning to type ‘list_int’ from type ‘result_item_list_t’
  446 |   test_TPCDS_Q9_result_result = result;
      |                                 ^~~~~~
